<resources>
    <string name="app_name">Mr\'Right</string>
    <string name="app_name1"># Mr\'Right</string>
    <string name="recommed">推荐</string>
    <string name="find">发现</string>
    <string name="message">消息</string>
    <string name="personal">我的</string>

    <string name="tuijian">推荐</string>
    <string name="fenlei">分类</string>
    <string name="guanzhu">关注</string>

    <string name="huati">话题</string>
    <string name="hudong">互动</string>

    <string name="tixing">提醒</string>
    <string name="sixin">私信</string>

    <string name="share">发帖</string>
    <string name="camera">发跟拍</string>
    <string name="answer">提问题</string>
    <string name="serch">搜索</string>

    <!--滑动菜单菜单选项-->
    <string name="my_tiezi">我的帖子</string>
    <string name="my_genpai">我的跟拍</string>
    <string name="my_pinglun">我的评论</string>
    <string name="my_zanguo">我的点赞</string>
    <string name="my_shoucang">我的收藏</string>
    <string name="my_lishi">浏览历史</string>
    <string name="set">设置</string>
    <string name="exit">登出</string>

    <!--个人信息修改界面-->
    <string name="gerenxinxi">个人信息</string>
    <string name="i_name">昵称</string>
    <string name="i_sex">性别</string>
    <string name="i_birth">生日</string>
    <string name="i_signature">个人签名</string>
    <string name="clickToEdit">点击修改头像</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="edit_save">保存</string>
    <string name="hint">这个人很懒，什么都没写~</string>

    <!--发帖界面-->
    <string name="writepost">发帖</string>
    <string name="post">发布</string>
    <string name="post_hint">分享快乐，汇集乐事~~~</string>
    <string name="chose_topic">选择话题</string>

    <!--个人信息界面-->
    <string name="huozan">获赞</string>
    <string name="fensi">粉丝</string>
    <string name="tiezi">帖子</string>
    <string name="genpai">跟拍</string>
    <string name="pinglun">评论</string>

    <!--登录界面-->
    <string name="login">登录</string>
    <string name="forgetPwd">忘记密码？</string>
    <string name="nameHint">请输入账号</string>
    <string name="pwdHint">请输入密码</string>
    <string name="register">注册</string>
    <string name="yanzhengmalogin">验证码登录 ></string>
    <string name="otherWayToLogin">其它方式登录</string>

    <!--注册界面-->
    <string name="phonenumHint">请输入手机号</string>
    <string name="yanzhengmaHint">请输入验证码</string>
    <string name="getYanzhengma">获取验证码</string>
    <string name="miao">秒</string>
    <string name="tongyi">注册即表示同意《隐私权声明》</string>

    <string name="text_test">TestTestTestTestTestTestTestTestTestTestTestTestTestTest
    TestTest TestTestTestTestTestTestTestTestTestTestTest</string>
    <string name="comment_more">查看更多 </string>
    <string name="comment_more2"> 条评论</string>
    <string name="post_detail">帖子详情</string>

    <!--评论详情-->
    <string name="comment_detail">评论详情</string>

    <!--帖子详情-->
    <string name="comment">留下一句话吧~</string>

    <!--聊天界面-->

    <!--话题界面-->
    <string name="huatijinxuan">话 题 精 选</string>
    <string name="huanyihuan">换一批</string>
    <string name="huatiguangchang">话题广场</string>
    <string name="chuangjianhuati">创建话题</string>

    <!--开发中界面-->
    <string name="kaifazhong">开发中，敬请期待~</string>
</resources>
