<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_tiezi"
            android:icon="@drawable/my_tiezi"
            android:title="@string/my_tiezi" />
        <item
            android:id="@+id/my_genpai"
            android:icon="@drawable/my_genpai"
            android:title="@string/my_genpai" />
        <item
            android:id="@+id/my_pinglun"
            android:icon="@drawable/my_pinglun"
            android:title="@string/my_pinglun"/>
        <item
            android:id="@+id/my_zanguo"
            android:icon="@drawable/my_zanguo"
            android:title="@string/my_zanguo"/>
        <item
            android:id="@+id/my_shoucang"
            android:icon="@drawable/my_shoucang"
            android:title="@string/my_shoucang"/>
        <item
            android:id="@+id/my_lishi"
            android:icon="@drawable/my_lishi"
            android:title="@string/my_lishi"/>
    </group>

    <group
        android:id="@+id/footer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/set"
            android:title="@string/set"/>
        <item
            android:id="@+id/exit"
            android:title="@string/exit"/>
    </group>
</menu>