<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wsh666.mrright.activity.MainActivity">


    <RadioGroup
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RadioButton
            style="@style/tab_menu_item"
            android:id="@+id/tab_recommed"
            android:drawableTop="@drawable/tab_recommend"
            android:text="@string/recommed"/>
        <RadioButton
            style="@style/tab_menu_item"
            android:id="@+id/tab_find"
            android:drawableTop="@drawable/tab_find"
            android:text="@string/find"/>
        <!--不放东西，且设置为不可点击-->
        <RadioButton
            style="@style/tab_menu_item"
            android:clickable="false"/>
        <RadioButton
            style="@style/tab_menu_item"
            android:id="@+id/tab_message"
            android:drawableTop="@drawable/tab_message"
            android:text="@string/message"/>
        <RadioButton
        style="@style/tab_menu_item"
            android:id="@+id/tab_personal"
            android:drawableTop="@drawable/tab_personal"
            android:text="@string/personal"/>
    </RadioGroup>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_bar"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@id/frame"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/view"
        android:gravity="center">

        <ImageView
            android:id="@+id/show_dialog"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/add"
            android:clickable="true"/>

    </LinearLayout>
</RelativeLayout>
