<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.wsh666.mrright.my_view.My_SlideShow
        android:layout_width="match_parent"
        android:layout_height="180dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <LinearLayout
            android:id="@+id/huatiguangchang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/test"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huatiguangchang"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/chuangjianhuati"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_gravity="center"
            android:clickable="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/test"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chuangjianhuati"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/huatijinxuan"
        android:layout_marginStart="10dp"
        android:textColor="@color/green"/>

    <ListView
        android:id="@+id/huatituijian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/huanyihuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huanyihuan"
        android:textColor="@color/green"
        android:layout_gravity="center"
        android:clickable="true"/>
</LinearLayout>