<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/comment_head_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/test" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/comment_username"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/app_name"/>
            <TextView
                android:id="@+id/comment_date"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/small_black"
                android:textSize="8sp"
                android:text="@string/app_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="end">
            <ImageView
                android:id="@+id/comment_up"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/up"/>
            <TextView
                android:id="@+id/comment_up_num"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/miao"/>
            <ImageView
                android:id="@+id/comment_down"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/down"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/comment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/text_test"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <LinearLayout
            android:id="@+id/more_comment"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_more"
                android:textSize="14sp"
                android:textColor="@color/green"/>
            <TextView
                android:id="@+id/comment_more_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miao"
                android:textSize="14sp"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_more2"
                android:textSize="14sp"
                android:id="@+id/textView"
                android:textColor="@color/green"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>