<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:id="@+id/btn_share"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitXY"
                android:src="@drawable/share"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_camare"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/camare"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/camera"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_answer"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitXY"
                android:src="@drawable/answer"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/answer"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_serch"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/serch"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/serch"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/close_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/chacha"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"/>

</LinearLayout>